* cont.c (rb_fiber_m_transfer, rb_fiber_resume): prohibit using   "resume" after "transfer" method are used.  You should not mix   "resume" fiber and "transfer" fiber.   [Bug #5526] * NEWS: add information about this change.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@33684 b2dd03c8-39d4-4d8f-98ff-823fe69b080e